# Transformer

./: .bumpversion.cfg  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  git.env  local.env  pylintrc.cfg  pyproject.toml  requirements.txt  setup.cfg
docs/: arch.puml  messaging.puml  transform_service.puml  trasnform_service.puml
src/: app.py  communication.py  dev.py  infra.py  logic.py  main.py  service_config.py  settings.py
src/models/: mat_events.py  service_config.py
src/service/: abstractions.py  actuator.py  entrypoint.py  service_config.py
src/service/commands/: abstract.py  any_config.py  base_config.py  collection.py  map_keys.py
src/service/transform/: abstract.py  collection.py
src/service/transform/commands/: add_key.py  aggregate_keys.py  del_key.py  empiricus_change.py  map_keys.py  special_change.py  value_sanitizer.py
src/the_flash/: __init__.py  application.py  settings.py  utils.py
src/the_flash/abstractions/: aio_comunicators.py
src/the_flash/adapters/: abstract_bridges.py  abstract_feeders.py
src/the_flash/adapters/aiokafka/: aio_producer_adapter.py  aiokafkaconsumer.py  aiokafkaproducer.py  consumer_feeder.py  factory.py  kafka_consumer_bridge.py
src/the_flash/feeders/: abstract_feeders.py
src/the_flash/feeders/consumer_feeders/: aio_consumer.py
src/the_flash/feeders/consumer_feeders/aiokafka/: factory.py  kafka_feeder.py
src/the_flash/models/: mat_events.py
src/the_flash/senders/: aio_kafka_producer.py  aio_producer.py
src/transform/: abstract.py  chain.py  collection.py  config.py
src/transform/commands/: add_key.py  aggregate_keys.py  del_key.py  empiricus_change.py  map_keys.py  value_sanitizer.py
src/transformer/: entrypoint.py
src/utils/: mapping.py
tests/: measure.py
tests/commands/: test_aggregate_keys.py  test_map_keys.py  test_value_sanitizer.py
tests/factory/: letter_factory.py
tests/service/transform/commands/: test_add_key_values.py  test_aggregate_keys.py  test_delete_keys.py  test_empiricus_change.py  test_map_keys.py  test_special_change.py  test_value_sanitizer.py
tests/transform/commands/: test_add_key_values.py  test_aggregate_keys.py  test_delete_keys.py  test_map_keys.py  test_value_sanitizer.py
tests/transformer/commands/: test_add_key_values.py  test_delete_keys.py  test_map_keys.py
tests/transformers/: add_key_values_test.py  aggregate_keys_test.py  conftest.py  delete_keys_test.py  dinamize_unpack_test.py  flatters_test.py  map_keys_test.py  pipedrive_unpack_test.py  value_sanitizer_test.py
tests/utils/: test_mapping.py
transformer/: __init__.py  abstract.py  chain.py  command.py  config.py  main.py  registry.py
transformer/commands/: add_key.py  aggregate_keys.py  del_key.py  map_keys.py  value_sanitizer.py
transformer/transformers/: abstract.py  add_key.py  aggregate_keys.py  chain.py  del_key.py  dinamize_unpack.py  flatten.py  flatters.py  map_keys.py  pipedrive_unpack.py  value_sanitizer.py
