[tool.poetry]
name = "JSON Transformer"
version = "1.2.0"
description = "Declare possible commands for manipulating JSON Data."
authors = [
    "Otavio Dantas <otavio-dantas@live.com>",
    "Vinícius <vinicius.vargas.ext@decode.buzz>",
    "Pedro Dardengo <pedro.mesquita.ext@decode.buzz>"
]

[tool.poetry.dependencies]
python = "^3.9"
the-flash = {git = "ssh://git@gitlab.decode.buzz/the-flash/core/the-flash-framework.git", rev = "v0.1.4"}


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
mypy = "^0.910"
pylint = "^2.10.2"
python-dotenv = "^0.19.0"
devtools = "^0.7.0"
snakeviz = "^2.1.0"
types-ujson = "^0.1.1"
Faker = "^8.12.1"
aiounittest = "^1.4.0"
