[tool.poetry]
name = "transformer"
version = "2.1.6"
license = "Proprietary"
description = "Declare possible commands for manipulating JSON Data."
authors = [
    "Otavio Dantas <otavio-dantas@live.com>",
    "Vinícius <vinicius.vargas.ext@decode.buzz>",
    "Pedro Dardengo <pedro.mesquita.ext@decode.buzz>"
]
readme = "README.md"
homepage = "https://gitlab.decode.buzz/the-flash/libraries/json-transformer"
repository = "https://gitlab.decode.buzz/the-flash/libraries/json-transformer"
include = ["transformer/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"
ujson = "^4.2.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
mypy = "^0.910"
python-dotenv = "^0.19.0"
devtools = "^0.8.0"
types-ujson = "^0.1.1"
Faker = "^8.12.1"
pre-commit = "^2.15.0"
commitizen = "^2.19.0"
black = "^21.9b0"
flake8 = "^3.9.2"

[tool.poetry.urls]
"Bug Tracker" = "https://gitlab.decode.buzz/the-flash/libraries/json-transformer/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
no_silence_site_packages = true
disallow_untyped_calls = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_globals = true
disallow_redefinition = true
no_implicit_reexport = true
pretty = true
sqlite_cache = true

[[tool.mypy.overrides]]
module=["faker.*", "dotenv.*"]
follow_imports = "skip"
warn_unused_ignores = true

[[tool.mypy.overrides]]
module=["pydantic.*"]
no_implicit_optional = false
warn_unused_ignores = false
disallow_untyped_calls = false
disallow_untyped_globals = false

[tool.commitizen]
version = "2.1.6"
tag_format = "v$major.$minor.$patch"
version_files = [
    "VERSION",
    "pyproject.toml",
    "transformer/__init__.py"
]
